removed site.baseUrl refs

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,7 +33,7 @@
   <i class="hex_icon hex_icon-black section-icon"
       style="height: 5.625rem; width: 4.9rem">
     <svg class="icon">
-      <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-court"/>
+      <use xlink:href="assets/img/cloudgov-sprite.svg#i-court"/>
     </svg>
   </i> -->
 </section>
@@ -51,7 +51,7 @@
   <i class="hex_icon hex_icon hex_icon-black section-icon"
       style="height: 5.625rem; width: 4.9rem">
     <svg class="icon">
-      <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-power"/>
+      <use xlink:href="assets/img/cloudgov-sprite.svg#i-power"/>
     </svg>
   </i> -->
 </section>
@@ -69,7 +69,7 @@
         <i class="hex_icon hex_icon-primary"
           style="height: 5.625rem; width: 4.9rem">
           <svg class="icon">
-            <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-shipping"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-shipping"/>
           </svg>
         </i>
         <h3>Platform-as-a-service</h3>
@@ -81,7 +81,7 @@
         <i class="hex_icon hex_icon-black"
           style="height: 5.625rem; width: 4.9rem">
           <svg class="icon">
-            <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-paperwork"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-paperwork"/>
           </svg>
         </i>
         <h3>Security documentation support</h3>
@@ -93,7 +93,7 @@
         <i class="hex_icon hex_icon-alt"
           style="height: 5.625rem; width: 4.9rem">
           <svg class="icon">
-            <use xlink:href="{{ .Site.BaseURL }}/assets/img/cloudgov-sprite.svg#i-compass"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-compass"/>
           </svg>
         </i>
         <h3>More to come</h3>
@@ -107,7 +107,7 @@
   <i class="hex_icon hex_icon-alt section-icon"
       style="height: 5.625rem; width: 4.9rem">
     <svg class="icon">
-      <use xlink:href="{{ .Site.BaseURL }}/assets/img/cloudgov-sprite.svg#i-plan"/>
+      <use xlink:href="assets/img/cloudgov-sprite.svg#i-plan"/>
     </svg>
   </i> -->
 </section>
@@ -124,7 +124,7 @@
       <div class="four_up-part">
         <div class="icon-container">
           <svg class="icon icon-alt" style="width: 2.875rem">
-            <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-agreement"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-agreement"/>
           </svg>
         </div>
         <h3>Usability</h3>
@@ -135,7 +135,7 @@
       <div class="four_up-part">
         <div class="icon-container">
           <svg class="icon icon-alt">
-            <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-double_arrow"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-double_arrow"/>
           </svg>
         </div>
         <h3>Scalability</h3>
@@ -146,7 +146,7 @@
       <div class="four_up-part">
         <div class="icon-container">
           <svg class="icon icon-alt">
-            <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-locked"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-locked"/>
           </svg>
         </div>
         <h3>Security</h3>
@@ -157,7 +157,7 @@
       <div class="four_up-part">
         <div class="icon-container">
           <svg class="icon icon-alt">
-            <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-user_researched"/>
+            <use xlink:href="assets/img/cloudgov-sprite.svg#i-user_researched"/>
           </svg>
         </div>
         <h3>Conformity with federal rules</h3>
@@ -171,7 +171,7 @@
   <i class="hex_icon hex_icon-primary section-icon"
       style="height: 5.625rem; width: 4.9rem">
     <svg class="icon">
-      <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-checked"/>
+      <use xlink:href="assets/img/cloudgov-sprite.svg#i-checked"/>
     </svg>
   </i>
   -->
@@ -196,7 +196,7 @@
   <i class="hex_icon hex_icon-alt section-icon"
       style="height: 5.625rem; width: 4.9rem">
     <svg class="icon">
-      <use xlink:href="{{ .Site.BaseURL }}assets/img/cloudgov-sprite.svg#i-user"/>
+      <use xlink:href="assets/img/cloudgov-sprite.svg#i-user"/>
     </svg>
   </i>
   -->
