changed red section to cream

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -38,7 +38,7 @@
   </i> -->
 </section>
 
-<section class="usa-content section section-red">
+<section class="usa-content section section-cream">
   <div class="usa-grid">
     <div class="section-content usa-content">
       <h1>We’re familiar with the challenges of government cloud&nbsp;ops.</h1>
