added attrib styles; fixed display of contact subhed

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,9 +1,9 @@
 <section>
   <a name="contact"></a>
   <h1>Contact us</h1>
+  <p class="section-subhed">Sign up for updates about the availability of cloud.gov from 18F</p>
     <form action="//gsa.us9.list-manage.com/subscribe/post?u=6f1977de9eff4c384dc8d6527&amp;id=ab90bdad59" method="post" id="contact" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <fieldset>
-        <h4>Sign up for updates about the availability of cloud.gov from 18F</h4>
         <div class="text_block">
           <label for="mce-EMAIL">Email Address </label>
           <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
