Renamed big quote classname
Which was done in cg-style#f703bc359969e785236717ac8cd95bf963a33d2d.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -206,18 +206,18 @@
   <div class="usa-grid">
     <div class="section-content usa-content">
       <h1>Testimonials</h1>
-      <blockquote class="big-quote">
+      <blockquote class="quote-big">
         <p>
           “With the help of cloud.gov, College Scorecard was able to focus on making important data available to the public. The streamlined ATO process was incredibly helpful in launching the project on schedule. We needed specific services that were not yet available in the platform, and the cloud.gov team responded quickly and supported our needs, letting us focus on the data and the software.” <span class="quote-attrib"><span class="quote-attrib-name">Sarah Allen,</span> 18F developer on the <a href="https://collegescorecard.ed.gov/">College Scorecard</a>
             team</span>
         </p>
       </blockquote>
-      <blockquote class="big-quote">
+      <blockquote class="quote-big">
         <p>
           “I managed the staging environment for the eRegs instance at CFPB and spent at least a fifth of my time managing the instance. On ATF’s eRegs instance, which runs on cloud.gov, that time was cut down to less than a day of configuration. I will gladly remove ‘server management’ from my resume now.” <span class="quote-attrib"><span class="quote-attrib-name">CM Lubinksi,</span> 18F developer on the <a href="https://atf-eregs.apps.cloud.gov/">ATF eRegulations</a> team</span>
         </p>
       </blockquote>
-      <blockquote class="big-quote">
+      <blockquote class="quote-big">
         <p>
           “The platform actually allows us to follow the fundamental software tenet of not repeating ourselves versus our previous framework. Every subsequent deploy of a stack allows us to add to our toolset for future re-use.” <span class="quote-attrib"><span class="quote-attrib-name">Kaitlin Devine,</span> 18F Director of Engineering </span>
         </p>
