--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,7 @@
     <!-- start logo -->
     <h2 class="header-title">
       <a href="/" class="logo" title="Home">
-        <svg class="logo">
+        <svg class="logo-img">
           <use xlink:href="/assets/img/cloudgov-sprite.svg#logo"/>
         </svg>
       </a>
