--- a/layouts/partials/overview-header.html
+++ b/layouts/partials/overview-header.html
@@ -33,7 +33,7 @@
         <!-- start logo -->
         <h2 class="header-title">
           <a href="/" class="logo" title="Home" accesskey="1" aria-label="Home">
-            <svg class="logo">
+            <svg class="logo-img">
               <use xlink:href="/assets/img/cloudgov-sprite.svg#logo"/>
             </svg>
           </a>
@@ -51,7 +51,7 @@
                   <input name="utf8" type="hidden" value="&#x2713;" />
                   <input id="search-field" autocomplete="off" type="search" name="query" placeholder="Search documentation">
                   <button type="submit">
-                    <span class="usa-sr-only">Search</span> 
+                    <span class="usa-sr-only">Search</span>
                   </button>
                 </div>
               </form>
@@ -61,7 +61,7 @@
                 </li>
                 <li class="nav-link">
                   <a href="/docs/">Documentation</a>
-                </li> 
+                </li>
                 <li class="nav-link">
                   <a href="/updates/">Updates</a>
                 </li>
@@ -82,7 +82,7 @@
               </ul>
             </div>
           </div>
-        </nav> 
+        </nav>
       </div>
 
     </header>
