returned hero home to blue bg

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
 
 
 
-<section class="section section-dark section-chevron_alt section-first"
+<section class="section section-blue section-chevron_alt section-first"
     id="main">
   <div class="usa-grid section-bg-parent">
     <div class="usa-width-whole billboard  section-bg">
