--- a/layouts/partials/docs-menu.html
+++ b/layouts/partials/docs-menu.html
@@ -46,10 +46,10 @@
             </li>
             {{end}}
             <li>
-              <a href="/docs/help/"><i class='fa fa-life-ring'></i> <span>Help</span></a>
+              <a href="/docs/help/"><i class='fa fa-fw fa-life-ring'></i> <span>Help</span></a>
             </li>
             {{ if .IsPage }}
-            {{ $File := .File }}  {{with $File.Path }}<li><a href="https://github.com/18f/cg-site/edit/master/content/{{ $File.Dir }}{{ $File.LogicalName }}" target="blank"><i class='fa fa-edit'></i> Refine this Page</a> </li>{{end}}
+            {{ $File := .File }}  {{with $File.Path }}<li><a href="https://github.com/18f/cg-site/edit/master/content/{{ $File.Dir }}{{ $File.LogicalName }}" target="blank"><i class='fa fa-edit fa-fw'></i> Refine this Page</a> </li>{{end}}
             {{ end }}
   </ul>
 </aside>
