--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
   <footer class="usa-footer usa-footer-slim usa-sans" role="contentinfo">
    <div class="usa-footer-primary-section">
-     <div class="usa-grid-full">
+     <div class="usa-grid">
        <nav class="usa-footer-nav usa-width-two-thirds">
          <ul class="usa-unstyled-list">
            <li class="usa-width-one-fourth usa-footer-primary-content">
