--- a/layouts/section/updates.html
+++ b/layouts/section/updates.html
@@ -9,7 +9,7 @@
 
   <div class="header-view">
     <div class="usa-grid">
-      <h1>Updates</h1>
+      <h1><a class="link-textblack" href="/updates/">Updates</a></h1>
     </div>
   </div>
   <div class="usa-grid">
