--- a/layouts/partials/overview-header.html
+++ b/layouts/partials/overview-header.html
@@ -103,5 +103,5 @@
 
 
       <main class="sidenav-main" id="main-content">
-        <div class="usa-content content">
+        <div class="usa-content content content-text">
 <h1 id="{{.Title | urlize }}">{{ .Title }}</h1>
