new page for single post

--- a/layouts/updates/single.html
+++ b/layouts/updates/single.html
@@ -7,23 +7,25 @@
 
     {{ partial "header.html" . }}
 
-    <main class="usa-content section-middle section-light">
+    <div class="header-view">
       <div class="usa-grid">
-        <div class="section-content usa-content">
+        <h1><a class="link-textblack" href="/updates/">Updates</a></h1>
+      </div>
+    </div>
+
+    <main class="usa-content">
+      <div class="usa-grid">
+        <div class="usa-width-two-thirds panel-new content-text">
+          <header class="post-header">
+            <span class="panel-new-date">{{ .Date.Format "Jan 2, 2006" }}{{ if .Params.author }} • {{ .Params.author }}{{ end }}{{ if .Params.meta }} • {{ .Params.meta }}{{ end }}</span>
+          </header>
           <h1>{{ .Title }}</h1>
 
           {{ if .Params.image }}
           <div class="page--banner" style="background-image: url({{ .Params.image}});"></div>
           {{ end }}
 
-          <section id="post" class="container content-section">
-            <header class="post-header">
-              <p class="post-meta">{{ .Date.Format "Jan 2, 2006" }}{{ if .Params.author }} • {{ .Params.author }}{{ end }}{{ if .Params.meta }} • {{ .Params.meta }}{{ end }}</p>
-            </header>
-            <article class="post-content">
-              {{ .Content }}
-            </article>
-          </section>
+          {{ .Content }}
        </div>
       </div>
     </main>
